added subscriptions for plebs, and removed it for artists.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -14,7 +14,9 @@ block content
 	p Email: #{email}
 	p Location: #{location}
 	p Time Zone: #{timezone}
-	p Subscriptions: #{subscriptions}
+	
+	if(isartist == false)
+		p Subscriptions: #{subscriptions}
 	
 	a(href="/editdashboard") Edit Information
 
