--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -21,10 +21,13 @@ block content
 		input(type="text" name="timezone" placeholder="Enter TimeZone...")
 		p Add Link to Other Sites
 		input(type="text" name="link" placeholder="Enter Link...")
-		p Subscription List
-		input(type="radio" name="shouldShowSubscription" value=true)
-		b Show
-		input(type="radio" name="shouldShowSubscription" value=false)
-		b Hide
-		p
-			input(type='submit')
+		
+		if(isartist !== true)
+			p Subscription List
+			input(type="radio" name="shouldShowSubscription" value=true)
+			b Show
+			input(type="radio" name="shouldShowSubscription" value=false)
+			b Hide
+			p
+	
+	input(type='submit')
