Added tests for some POST user info basics

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -12,5 +12,7 @@ block content
 	p Name: #{name}
 	p Email: #{email}
 	p Location: #{location}
+	p link: 
+		a(href='#{link}') #{link}
 	if (shouldShowSubscription == true) 
 		p Subscriptions: #{subscriptions}
