--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,20 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/pretty.css')
+    link(rel='stylesheet', href='/css/pretty.css')
+    link(rel='stylesheet', href='/css/bootstrap-theme.css')
+    link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
     script(src="/angular.min.js")
     script(src="/jquery-2.2.0.min.js")
     script(src="/javascripts/searchform.js")
     script(src="/javascripts/angular_controller.js")
+    script(src="/javascripts/bootstrap.js")
+    script(src="/javascripts/bootstrap.min.js")
+    script(src="/javascripts/npm.js")
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     div(ng-app="authentication" ng-controller="authController")
       block content_layout
