--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -1,19 +1,42 @@
 extends layout
 
 block content_layout
-	ul.headerbar
-		li.headerlink(ng-show="isartist")
-			a(href="/accounts/"+ "{{username}}" +"/create") + Create Comic
-		li.headerlink
-			a(href="/") My Dashboard
-		ul.headerright
-			li.headerlink
-				a(href="/profile/" + "{{username}}") {{username}}
-			li.headerlink
-				a(ng-click="logout()" href="") Sign Out
-			li.headerlink
-				input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
-			li.headerlink
-				a(href="javascript:searchSubmit();").lowpad
-				img(src="/images/headerbar_icon_search.png" alt="Search")
+	nav(class="navbar navbar-default navbar-static-top")
+		div(class="container-fluid")
+			div(class="navbar-header")
+				button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
+					span(class="sr-only") Toggle Navigation
+					span(class="icon-bar")
+					span(class="icon-bar")
+					span(class="icon-bar")
+				a(class="navbar-brand" href="/") DTcomics
+			div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
+				ul(class="nav navbar-nav")
+					li
+						a(href="/accounts/"+ "{{username}}" +"/create" ng-show="isartist") + Create Comic
+							span(class="sr-only")(current)
+				form(class="navbar-form navbar-right" role="search")
+						div(class="form-group")
+							input(type="text" class="form-control" placeholder="search . . ." onkeypress="searchKeypress(event);" onfocus="searchFocusClear();")#search
+							a(href="javascript:searchSubmit();")
+						p(class="glyphicon glyphicon-search" aria-hidden="true")
+				ul(class="nav navbar-nav navbar-right")
+					li
+						a(href="/profile/" + "{{username}}") {{username}}
+					li
+						a(href="" ng-click="logout()") SignOut
+		//- li.headerlink(ng-show="isartist")
+		//- 	a(href="/accounts/"+ "{{username}}" +"/create") + Create Comic
+		//- li.headerlink
+		//- 	a(href="/") My Dashboard
+		//- ul.headerright
+		//- 	li.headerlink
+		//- 		a(href="/profile/" + "{{username}}") {{username}}
+		//- 	li.headerlink
+		//- 		a(ng-click="logout()" href="") Sign Out
+		//- 	li.headerlink
+		//- 		input(type=text, value="Search...", onkeypress="searchKeypress(event);" onfocus="searchFocusClear();").search#search
+		//- 	li.headerlink
+		//- 		a(href="javascript:searchSubmit();").lowpad
+		//- 		img(src="/images/headerbar_icon_search.png" alt="Search")
 	block content
