styled login page and register page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,13 @@ html
     link(rel='stylesheet', href='/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/jquery-ui.min.css')
     script(src="/angular.min.js")
     script(src="/jquery-2.2.0.min.js")
+    script(src="/jquery-ui.js")
+    script(src="/jquery-ui.min.js")
+    script(src="/javascripts/jquery_controller.js")
+    script(src="/external/jquery/jquery.js")
     script(src="/javascripts/searchform.js")
     script(src="/javascripts/angular_controller.js")
     script(src="/javascripts/bootstrap.js")
