--- a/views/authentication.jade
+++ b/views/authentication.jade
@@ -1,11 +1,17 @@
 extends layout
 
 block content_layout
-  table(align="center" border=1 width="400px").auth
-    tr
-      th
-        h1 DropTableComix
-         block content_authentication_head
-    tr
-      td
-        block content_authentication
+	div(id="bg")
+		img(src="http://i.imgur.com/Xlg1N7E.jpg" alt="")
+	div(class="container")
+		div(class="row vertical-offset-100")
+			div(class="col-md-4 col-md-offset-4")
+				div(class="panel panel-primary panel-transparent")
+					div(class="panel-heading panel-heading-custom")
+						p(class="form-title") DropTableComix.
+				div(class="panel panel-default")
+					div(class="panel-heading")
+						block content_authentication_head
+					div(class="panel-body")
+						form(accept-charset="UTF-8" role="form")
+						block content_authentication
