--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -14,7 +14,7 @@ block content_layout
 				ul(class="nav navbar-nav")
 					li
 						a(href="/accounts/"+ "{{username}}" +"/create" ng-show="isartist") + Create Comic
-							span(class="sr-only")(current)
+							span(class="sr-only")
 				form(class="navbar-form navbar-right" role="search")
 						div(class="form-group")
 							input(type="text" class="form-control" placeholder="search . . ." onkeypress="searchKeypress(event);" onfocus="searchFocusClear();")#search
