--- a/views/simplelogin.jade
+++ b/views/simplelogin.jade
@@ -1,19 +1,18 @@
 extends authentication
 
 block content_authentication_head
-  h2 Log In
+  h3(class="panel-title") Please sign in
 
 block content_authentication
-  div
+  fieldset
+    div(class="form-group")
+      input(class="form-control" type="text" ng-model="auth_username" placeholder="Username")
+    div(class="form-group")
+      input(class="form-control" type="password" ng-model="auth_password" placeholder="Password")
+    button(class="btn btn-lg btn-success btn-block" ng-click="login()" ng-show="auth_username.length>-1") Login {{auth_username}}
     font(size="2")
-      p First time user? 
-        a(href="/auth/register") Sign up
+      p(style="padding-top:5px") First time user? 
+        a(href="/auth/register") Register
         | !
-    form
-      p Username
-        input(type="text" ng-model="auth_username" placeholder="Enter name here")
-      p Password
-        input(type="password" ng-model="auth_password" placeholder="Password")
-      button(ng-click="login()" ng-show="auth_username.length>0") Log in as {{auth_username}}
     p
       font(color="red") {{response}}
