Overlays now stored in back-end. Not rendered.
Also: emails now a config option.

--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -40,6 +40,8 @@ block content_comic
 		img(src="/images/icon_forward.png" ng-click="movepanel(mouseover_panel,mouseover_panel+1);")
 		| &nbsp
 		img(src="/images/icon_delete.png" ng-click="deletepanel(mouseover_panel);")
+		| &nbsp
+		img(src="/images/icon_pop.png" ng-click="poppanel(mouseover_panel);")
 
 block content_comment
 	div(class="commentcontainer")
