--- a/views/searchresults.jade
+++ b/views/searchresults.jade
@@ -6,4 +6,24 @@ block content
 		each comic, i in comics
 			li
 				a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
-	
+	form#aform(name='cat', method='GET')
+		p Advanced Search
+			input#asearch(type="text" ng-model="query" placeholder="Enter Query")
+		label 
+			input#searchtitle(type='checkbox' name='title' checked) 
+		| Title
+		br
+		label 
+			input#searchcreator(type='checkbox' name='creator' checked) 
+		| Creator
+		br
+		label 
+			input#searchdescription(type='checkbox' name='description' checked) 
+		| Description
+		br
+		label 
+			input#searchtags(type='checkbox' name='tags' checked) 
+		| Tags
+		br
+		input(type=submit ng-click="a_search()" ng-show = "query.length>0" value='Search For {{query}}') 
+
