--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -3,11 +3,11 @@ extends pretty
 
 block content
 	form(ng-init="comics=#{comics_js}")
-	h1.bannertext Dashboard
+	h1.bannertext My Dashboard
 	
 	h2= username
 	p
-		img(src='/accounts/#{username}/avatar' width=96 border=2)
+		img(src='/accounts/#{username}/avatar' width=196 border=12)
 	
 	p Description: #{description}
 	p Name: #{name}
@@ -19,6 +19,9 @@ block content
 		p Subscriptions: #{subscriptions}
 	
 	a(href="/editdashboard") Edit Information
+	p
+	a(href="/changepassword") Change Password
+
 
 	h2 Comics
 	if(isartist == true && comics_length != 0)
