--- a/views/profile.jade
+++ b/views/profile.jade
@@ -4,9 +4,9 @@ extends pretty
 block content
 	form(ng-init="comics=#{comics_js}")
 	h1.bannertext= Profile 
-	p #{username} 
+	h2 #{username} 
 	p
-		img(src='/accounts/#{username}/avatar' width=96 border=2)
+		img(src='/accounts/#{username}/avatar' width=196 border=12)
 	
 	p Description: #{description}
 	p Name: #{name}
