Implement comic preloading-hard to verify

--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -15,6 +15,11 @@ block content_comic
 			span(id="page-area" contenteditable="true")
 				each pic, i in panels 
 					img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i)
+	center
+		div(class="comicpage" style="width:1000px")
+			span(id="page-area" contenteditable="true")
+				each pic, i in next_panels 
+					img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i, hidden)
 	p
 		a.share(ng-href="#share" ng-click="shlink='#{share_link}'")
 			img(src="/images/icon_share.png" alt="share")
