--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -26,6 +26,8 @@ block content_comic
 		span(ng-show="shlink.length>0")
 			input(readonly="readonly" ng-model="shlink" ng-init="")
 	a(href="https://www.facebook.com/sharer/sharer.php?u="+"#{share_link}" target="_blank" ) Share on Facebook
+	br
+	a(class="twitter-share-button"  href="https://twitter.com/intent/tweet?text=#{share_link}") Tweet
 	button(ng-click = "subscribe_comic('#{comic_uri}')" ng-show = "!isartist") Subscribe
 	p Collaborators:
 		each user, i in editlist
