--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -18,10 +18,10 @@ block content_comic
 			span(id="page-area" contenteditable="true" style="position:relative;")
 				//- panels
 				span(data-ng-repeat="i in utilrange(0,draft.panels.length)")
-					img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.panels[i]}}" ng-mouseover="mouseover(i)" ng-mouseleave="mouseleave(i,'panel',$event)" id="panel{{i}}")
+					img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.panels[i]}}" ng-mouseover="mouseover(i)" ng-mouseleave="mouseleave(i,'panel',$event)" ng-mousemove="mousemove(i,'panel',$event)" id="panel{{i}}")
 				//- overlays
 				span(data-ng-repeat="i in utilrange(0,draft.overlays.length)" style="position: absolute;top:0;left:0;")
-					img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.overlays[i].panelID}}" style="{{'position:absolute;left:'+getOverlayX(i)+'px;'}}" ng-mouseover="mouseover_lay(i)" ng-mouseleave="mouseleave(i,'overlay',$event)" id="overlay{{i}}")
+					img(ng-src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/{{draft.overlays[i].panelID}}" style="{{'position:absolute;left:'+getOverlayX(i)+'px;opacity:'+getOverlayOpacity()+';'}}" ng-mouseover="mouseover_lay(i)" ng-mouseleave="mouseleave(i,'overlay',$event)" ng-mousemove="mousemove(i,'overlay',$event)" id="overlay{{i}}")
 					
 					
 	p(ng-show="response.length>0")
@@ -39,7 +39,7 @@ block content_comic
 
 	//- dynamic elements --- mouseover for panel
 	div(style="position:fixed;left:0px;top:0px;")
-		svg(width=20000 height=30000 ng-show="mouseover_panel>-1" ng-mouseleave="mouseleave(-1,'',$event)" ng-mouseover="mouseleave(-1,'',$event)")
+		svg(width=20000 height=30000 ng-show="mouseover_panel>-1" ng-mouseleave="mouseleave(-1,'',$event)" ng-mouseover="mouseleave(-1,'',$event)" ng-mousemove="mousemove(-1,'',$event)")
 			rect(width="{{boxgetattr().width}}" height="{{boxgetattr().height}}" style="stroke-width:3;stroke:black;fill:blue;fill-opacity:0.1;" x="{{boxgetattr().left}}" y="{{boxgetattr().top}}")
 	div(style="position:fixed;left:{{boxgetattr().left}}px;top:{{boxgetattr().top}}px;" ng-show="mouseover_panel>-1")
 		img(src="/images/icon_back.png" ng-click="movepanel(mouseover_panel,mouseover_panel-1);")
@@ -52,8 +52,8 @@ block content_comic
 
 	//- dynamic elements --- mouseover for overlay
 	div(style="position:fixed;left:0px;top:0px;")
-		svg(width=20000 height=30000 ng-show="mouseover_overlay>-1" ng-mouseleave="mouseleave(-1,'',$event)" ng-mouseover="mouseleave(-1,'',$event)")
-			rect(width="{{boxgetattr().width}}" height="{{boxgetattr().height}}" style="stroke-width:3;stroke:black;fill:red;fill-opacity:0.1;" x="{{boxgetattr().left}}" y="{{boxgetattr().top}}")
+		svg(width=20000 height=30000 ng-show="mouseover_overlay>-1" ng-mouseleave="mouseleave(-1,'',$event)" ng-mouseover="mouseleave(-1,'',$event)" ng-mousemove="mousemove(-1,'',$event)")
+			rect(width="{{boxgetattr().width}}" height="{{boxgetattr().height}}" style="stroke-width:3;stroke:green;fill:green;fill-opacity:0.25;" x="{{boxgetattr().left}}" y="{{boxgetattr().top}}")
 	div(style="position:fixed;left:{{boxgetattr().left}}px;top:{{boxgetattr().top}}px;" ng-show="mouseover_overlay>-1")
 		img(src="/images/icon_delete.png" ng-click="deleteoverlay(mouseover_overlay);")
 
