trying to figure out what broke my editdashboard

--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -20,7 +20,7 @@ block content
 		p Location
 		input(type="text" name="location" placeholder="Enter Location...")
 		
-		p Time Zone
+		//- p Time Zone
 
 		p Add Link to Other Sites
 		input(type="text" name="link" placeholder="Enter Link...")
