--- a/views/forgotmypassword.jade
+++ b/views/forgotmypassword.jade
@@ -1,10 +1,10 @@
  block content
 	form(ng-init="comics=#{comics_js}")
-	h1.bannertext = Change Password
+	h1.bannertext Account Retrival 
 	form(method='post', enctype='multipart/form-data', action='/forgotpassword')
 
 
-		p Email
-			input(type="email" name="email" placeholder="Enter Email...")
+		p Username or Email
+			input(type="username" name="username" placeholder="Enter Username or Email...")
 		p
 			input(type='submit')
