--- a/views/changepassword.jade
+++ b/views/changepassword.jade
@@ -3,7 +3,7 @@ extends pretty
 
 block content
 	form(ng-init="comics=#{comics_js}")
-	h1.bannertext = Change Password
+	h1.bannertext Change Password
 	form(method='post', enctype='multipart/form-data', action='/changepassword')
 
 		p Password
