added change password and account retrevial; jade page for acccount retrevial still not rendering properly

--- a/views/changepassword.jade
+++ b/views/changepassword.jade
@@ -6,14 +6,14 @@ block content
 	h1.bannertext Change Password
 	form(method='post', enctype='multipart/form-data', action='/changepassword')
 
-		p Password
-			input(type="password" name="password" placeholder="Enter New Password...")
+		p -New Password-
+		input(type="password" name="newpass" placeholder="Enter New Password...")
 
-		p Confirm Password
-			input(type="password" name="confirmpass" placeholder="Confirm Password...")
+		p -Confirm Password-
+		input(type="password" name="confirmpass" placeholder="Confirm Password...")
 
-		p Old Password
-			input(type="password" name="oldpass" placeholder="Enter Old Password...")
+		p -Old Password-
+		input(type="password" name="oldpass" placeholder="Enter Old Password...")
 
 		p
-			input(type='submit')
+		input(type='submit')
