--- a/views/forgotmypassword.jade
+++ b/views/forgotmypassword.jade
@@ -1,10 +1,21 @@
- block content
-	form(ng-init="comics=#{comics_js}")
-	h1.bannertext Account Retrival 
-	form(method='post', enctype='multipart/form-data', action='/forgotpassword')
+extends authentication
 
+block content_authentication_head
+  h3(class="panel-title") Please enter your email 
 
-		p Username or Email
-			input(type="username" name="username" placeholder="Enter Username or Email...")
-		p
-			input(type='submit')
+block content_authentication
+  fieldset
+    form(method='post' class="form-group" enctype='multipart/form-data' action= '/forgotpassword')
+      input(class="form-control" name = "usernameoremail" type="text" placeholder="Enter your email")
+      button(class="btn btn-md btn-success btn-block") Submit
+    
+
+    font(size="2")
+      p(style="padding-top:10px")
+        a(href="/auth/register") Registerate
+        
+      p
+        font(size="2")
+        p
+          a(href="/auth/login") Sign In
+   
