--- a/views/simplelogin.jade
+++ b/views/simplelogin.jade
@@ -14,5 +14,7 @@ block content_authentication
       p(style="padding-top:5px") First time user? 
         a(href="/auth/register") Register
         | !
+      p
+        a(href="/forgotpassword") Forgot password
     p
       font(color="red") {{response}}
