been awhile since I pushed the styling branch

--- a/views/createcomic.jade
+++ b/views/createcomic.jade
@@ -2,7 +2,7 @@ extends pretty
 
 block content
 	h1.bannertext= header
-	form
+	form(class="smallcenter")
 		p Comic
 			input(type="text" ng-model="comic_name" placeholder="Enter name here")
 		p Description
