--- a/views/adminpage.jade
+++ b/views/adminpage.jade
@@ -11,15 +11,14 @@ block content
 				input(type="checkbox" ng-model="vl.#{user}")
 				|  #{user}
 				br
-		button(ng-show="evict_list('view').length>0" ng-click="evict_users(evict_list('view'),'view')")
+		button(class="btn btn-warning" ng-show="evict_list('view').length>0" ng-click="evict_users(evict_list('view'),'view')")
 			| Evict {{evict_list('view').join(', ')}}
 		form
 			p Invite a new user to view:
 				input(type="text" ng-model="username_input" placeholder="Enter username here")
-			button(ng-click = 'viewlist_add()' ng-show='username_input.length>0') Submit {{username_input}}
+			button(class="btn btn-default" ng-click = 'viewlist_add()' ng-show='username_input.length>0') Submit {{username_input}}
 		p
 			font(color="red") {{response1}}
-
 	hr
 	h2 Collaboration Permissions
 	div(id=editlistdiv2) 
@@ -29,11 +28,11 @@ block content
 				input(type="checkbox" ng-model="el.#{user}")
 				|  #{user}
 				br
-		button(ng-show="evict_list('edit').length>0" ng-click="evict_users(evict_list('edit'),'edit')")
+		button(class="btn btn-warning" ng-show="evict_list('edit').length>0" ng-click="evict_users(evict_list('edit'),'edit')")
 			| Evict {{evict_list('edit').join(', ')}}
-		form
-			p Invite a new Artist to collaborate:
-				input(type="text" ng-model="editor_input" placeholder="Enter username here")
-			button(ng-click="editlist_add()" ng-show="editor_input.length>0") Submit {{editor_input}}
-		p
-			font(color="red") {{response2}}
+		//- form
+		//- 	p Invite a new Artist to collaborate:
+		//- 		input(type="text" ng-model="editor_input" placeholder="Enter username here")
+		//- 	button(class="btn btn-default" ng-click="editlist_add()" ng-show="editor_input.length>0") Submit {{editor_input}}
+		//- p
+		//- 	font(color="red") {{response2}}
