--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,5 +22,11 @@ html
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
     body
-        div(ng-app="authentication" ng-controller="authController")
-            block content_layout
+        div(id="wrapperbottom")
+            div(ng-app="authentication" ng-controller="authController")
+                div(id="contentbottom")
+                    block content_layout
+                div(id="footerbottom" style="margin:0px;border-radius:0px;background:pink")
+                    div(class="container")
+                        div(class="col-md-4 col-md-offset-4")
+                            p hello hello
