--- a/views/profile.jade
+++ b/views/profile.jade
@@ -3,16 +3,88 @@ extends pretty
 
 block content
 	form(ng-init="comics=#{comics_js}")
-	h1.bannertext= Profile 
-	p #{username} 
-	p
-		img(src='/accounts/#{username}/avatar' width=96 border=2)
-	
-	p Description: #{description}
-	p Name: #{name}
-	p Email: #{email}
-	p Location: #{location}
-	p link: 
-		a(href='#{link}') #{link}
-	if (shouldShowSubscription == true) 
-		p Subscriptions: #{subscriptions}
+		div(class="container bs-docs-container")
+				div(class="row")
+					//- PROFILE BOX
+					div(class="col-md-12")
+						//- form(ng-init="comics=#{comics_js}")
+						div(class="twPc-div")
+							a(class="twPc-bg twPc-block")
+							div
+								//- edit information button
+								div(class="twPc-button")
+									a(type="button" href="/editdashboard" class="btn btn-primary" style="padding-top:2px;padding-bottom:2px") edit info
+								//- edit information button end
+							a(title="#{username}" href="/profile/#{username}" class="twPc-avatarLink")
+								img(alt="#{username}" src="/accounts/#{username}/avatar" class="twPc-avatarImg")
+							div(class="twPc-divUser")
+								div(class="twPc-divName")
+									a(href="/profile/#{username}") #{username}
+								span
+									p Description: #{description} 
+								span
+									p(style="padding-left:10px;line-height:150%;") Name: #{name} <br />
+										| Email: #{email} <br />
+										| Location: #{location} <br />
+										| Time Zone: #{timezone} <br />
+										| link:
+										a(href='#{link}') #{link}
+					//- END OF PROFILE BOX
+				//- COMIC BOX TABS
+				div(class="row")
+					div(class="col-md-12" style="padding:15px;")
+						div(id="custom_carousel" class="carousel slide dashboardcomicbox")
+							div(class="controls")
+								ul(class="nav nav-tabs" role="tablist" style="padding-top:10px")
+									li(role="presentation" class="active" data-target="#custom_carousel" data-slide-to="0")
+										a(href="#" aria-controls="comics" role="tab" data-toggle="tab")
+											small Comics
+									li(role="presentation" data-target="#custom_carousel" data-slide-to="1")
+										a(href="#" aria-controls="subscriptions" role="tab" data-toggle="tab")
+											small Subscriptions
+									//- li(data-target="#custom_carousel" data-slide-to="2")
+									//- 	a(href="#")
+									//- 		img(src="http://placehold.it/50x50")
+									//- 		small Slide Three
+									//- li(data-target="#custom_carousel" data-slide-to="3")
+									//- 	a(href="#")
+									//- 		img(src="http://placehold.it/50x50")
+									//- 		small Slide Four
+							hr
+							div(class="carousel-inner")
+								div(class="item active")
+									div(class="container-fluid")
+										div(class="col-md-3")
+											img(src="http://placehold.it/350x250" class="img-responsive")
+										div(class="col-md-9")
+											h2 Comics
+								//- 			if(isartist == true && comics_length != 0)
+								//- 				p Created Comics
+								//- 			if(isartist == false && comics_length != 0)
+								//- 				p My Comics
+								//- 			ul
+								//- 				each comic, i in comics
+								//- 					li
+								//- 						a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
+								div(class="item")
+									div(class="container-fluid")
+										div(class="col-md-3")
+											img(src="http://placehold.it/350x250" class="img-responsive")
+										div(class="col-md-9")
+											h2 Subscriptions
+											if (shouldShowSubscription == true) 
+												p Subscriptions: #{subscriptions}
+								//- div(class="item")
+								//- 	div(class="container-fluid")
+								//- 		div(class="col-md-3")
+								//- 			img(src="http://placehold.it/350x250" class="img-responsive")
+								//- 		div(class="col-md-9")
+								//- 			h2 Slide 3
+								//- 			p hello this is the third slide, hopefully it's working
+								//- div(class="item")
+								//- 	div(class="container-fluid")
+								//- 		div(class="col-md-3")
+								//- 			img(src="http://placehold.it/350x250" class="img-responsive")
+								//- 		div(class="col-md-9")
+								//- 			h2 Slide 4
+								//- 			p hello this is the fourth slide, hopefully it's working
