--- a/views/authentication.jade
+++ b/views/authentication.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block content_layout
+block content_auth
 	div(id="bg")
 		img(src="/images/background.png" alt="")
 	div(class="container")
