--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,9 +24,15 @@ html
     body
         div(id="wrapperbottom")
             div(ng-app="authentication" ng-controller="authController")
-                div(id="contentbottom")
-                    block content_layout
-                div(id="footerbottom" style="margin:0px;border-radius:0px;background:pink")
-                    div(class="container")
-                        div(class="col-md-4 col-md-offset-4")
-                            p hello hello
+                block content_auth
+                    div(id="contentbottom")
+                        block content_layout
+                    div(id="footerbottom")
+                        div(class="container")
+                            div(class="row")
+                                div(class="col-md-4 col-md-offset-4 text-center")
+                                    p WELCOME TO DROPTABLECOMIX! <br /> WE ARE YOUR ONE STOP TO COMIX FREEDOM
+                            hr
+                            div(id="copyright")
+                                |site design / logo © 2016 DropTable Students Inc; Arman, Edward, Noah, Tina <br />
+                                |rev 2016.3.29.1000
